[package]
name = "nws_exporter"
version = "0.3.0"
authors = ["Nick Pillitteri"]
description = "Prometheus metrics exporter for api.weather.gov"
homepage = "https://github.com/56quarters/nws_exporter"
repository = "https://github.com/56quarters/nws_exporter"
readme = "README.md"
license = "GPL-3.0+"
keywords = ["nws", "metrics", "prometheus"]
edition = "2021"

[dependencies]
clap = { version = "3.0.14", features = ["cargo", "derive", "std"], default-features = false }
percent-encoding = "2.1.0"
prometheus = { version = "0.13.0", features = ["process"] }
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0.101", features = ["derive"] }
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.11"
tracing-subscriber = "0.1.6"
warp = "0.3.2"

[lib]
name = "nws_exporter"
path = "src/nws_exporter/lib.rs"

