[package]
name = "nws_exporter"
version = "0.4.0"
authors = ["Nick Pillitteri"]
description = "Prometheus metrics exporter for api.weather.gov"
homepage = "https://github.com/56quarters/nws_exporter"
repository = "https://github.com/56quarters/nws_exporter"
readme = "README.md"
license = "GPL-3.0+"
keywords = ["nws", "metrics", "prometheus"]
edition = "2021"

[dependencies]
axum = "0.6.20"
clap = { version = "3.0.14", features = ["cargo", "derive", "std"], default-features = false }
percent-encoding = "2.1.0"
prometheus-client = "0.21.2"
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0.101", features = ["derive"] }
tokio = { version = "1.14.0", features = ["full"] }
tower-http = {version = "0.4.4", features = ["trace"] }
tracing = "0.1.11"
tracing-subscriber = "0.3.17"

[lib]
name = "nws_exporter"
path = "src/nws_exporter/lib.rs"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.2.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]

